--- a/openaifile.ipynb
+++ b/openaifile.ipynb
@@ -2,14 +2,66 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
     "import os\n",
     "import openai\n",
     "import requests\n",
-    "openai.api_key = \"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\""
+    "openai.api_key = \"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\""
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def call_openapi(summary,skills):\n",
+    "    response = openai.Completion.create(\n",
+    "      engine=\"davinci\",\n",
+    "      prompt=\"\"\"\n",
+    "        This is a JT and JD extractor.\n",
+    "        Summary: Having 3.6 Years experience (3 years in Pyspark and Spark using Scala) on Projects in Judicial, Retail,\n",
+    "                Pharma Services industries with quick learning ability , performing ETL Operations with primary focus in\n",
+    "                Developing Spark Scripts, Optimization,Data Cleansing , Data Profiling ,Data Wrangling , Data Ingestion\n",
+    "                and Data Loading. Experience of BIG DATA DEVELOPER with around 3 years on project in Judicial services,\n",
+    "                Retail, Pharma industries performing ETL operations and primary focus on Data Cleansing,\n",
+    "                Data Profiling, Data ingestion and Data Loading.\n",
+    "                Experience in all phases of Software Development Life Cycle. Direct interaction with\n",
+    "                business community, collecting functional requirements , Analysis , Design , Development ,\n",
+    "                Implementation , Enhancement , Maintenance and Production support .\n",
+    "                Experience in ETL projects and ETL tools technologies like Spark, HIVE and Hadoop .\n",
+    "                Developing Spark applications using multiple programming language Python, Scala.\n",
+    "                Experience in processing structured and semi-structured in Hadoop using Spark\n",
+    "                Good knowledge in HIVE Warehouse and Internal/External tables, Partitioning, Bucketing,\n",
+    "                Joins Optimization of HIVE Warehouse\n",
+    "                Experience in writing SQL Queries.\n",
+    "                Good understanding of Data Warehousing concepts (SCD's, Dimension & Fact Tables).\n",
+    "                Direct Interaction with business community, collecting/creating functional requirements\n",
+    "                and converting them to technical specifications.\n",
+    "                Good multi-tasking skills with flexible timings and good communication skills.\n",
+    "        Skills: Scala,Python, SQL,Big Data Ecosystem Apache Spark, Hive, HDFS, Hadoop, YARN,Google\n",
+    "        Cloud Platform (GCP),Apache Airflow,Data Normalization and Warehousing, MySQL\n",
+    "        Job Description:A data engineer, As part of our team, your main responsibilities will focus in area of:\n",
+    "                Development of data engineering solutions for new and ongoing projects in DW and Big Data area,\n",
+    "                Large-scale deployments, automation and configuration management.\n",
+    "                Technology explorations, research & development, deep investigations & troubleshooting\n",
+    "###\n",
+    "        Summary: {summary}\n",
+    "        Skills: {skills}\n",
+    "        Job Description:\"\"\".format(summary=summary,skills=skills),\n",
+    "      temperature=0.3,\n",
+    "      max_tokens=60,\n",
+    "      top_p=1.0,\n",
+    "      frequency_penalty=0.0,\n",
+    "      presence_penalty=0.0,\n",
+    "      stop=[\"###\"]\n",
+    "    )\n",
+    "    \n",
+    "    return response\n",
+    "  "
    ]
   },
   {
@@ -18,53 +70,76 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "def call_openapi(question):\n",
-    "    response = openai.Completion.create(\n",
-    "      engine=\"davinci\",\n",
-    "      prompt=\"\"\"\n",
-    "        This is a banking expert.\n",
-    "        Q: What is interest rate?\n",
-    "        A: The interest rate is the amount a lender charges for the use of assets expressed as a percentage of the principal.\n",
-    "        Q: What is PD?\n",
-    "        A: Probability of default.\n",
-    "        Q: {question}?\n",
-    "        A:\"\"\".format(question=question),\n",
-    "      temperature=0.3,\n",
-    "      max_tokens=60,\n",
-    "      top_p=1.0,\n",
-    "      frequency_penalty=0.0,\n",
-    "      presence_penalty=0.0,\n",
-    "      stop=[\"\\n\"]\n",
-    "    )\n",
-    "    \n",
-    "    return response"
+    "def extract_ans(response):\n",
+    "    return print('Job desc: ', response.choices[0].text.partition('\\n')[0])"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 13,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "summary=\"\"\"develops and maintains highly scalable, secure and reliable data\n",
+    "structures. Accustomed to working closely with system architects,data scientists and design analysts to understand\n",
+    "business or industry requirements to develop comprehensive data models. Proficient at developing ETL pipelines at the\n",
+    "modeling, design and implementation stages.Created python application to automate the process of manual rotation of passwords for the generic accounts\n",
+    "used by different pipelines in PAM Portal, which is an UI to access CyberArk's CCP Safes.\n",
+    "Created Venafi Certificates to connect different generic accounts with Non-Prod and Prod CCP safes of CyberArk\n",
+    "and Applied proper authenticating methods to provide security to the process using key tab.\n",
+    "Created the Bamboo plan and Airflow Dags to deploy the source code in airflow cluster.\n",
+    "Worked on CI/CD and airflow for continuous development and deployment using stash/bitbucket and bamboo.\n",
+    "Tools : Python, Bitbucket, Airflow, Bamboo.\"\"\"\n",
+    "skills=\"\"\"Spark SQL, Spark Core, Python, Java, Scala, SQL, Drools, Azure Databricks, Notebooks, Bamboo & Arturo (CI/CD),\n",
+    "Git/Bitbucket, Hadoop, Hive & HBase & Postgres , Hue & Impala, Oozie & Airflow Scheduler, Control-M, Kafka & Flume,\n",
+    "Bash/python Shell Scripting\"\"\""
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 14,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "response=call_openapi(summary,skills)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 15,
    "metadata": {},
    "outputs": [
     {
-     "ename": "RateLimitError",
-     "evalue": "You exceeded your current quota, please check your plan and billing details.",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[1;31mRateLimitError\u001b[0m                            Traceback (most recent call last)",
-      "Cell \u001b[1;32mIn [6], line 1\u001b[0m\n\u001b[1;32m----> 1\u001b[0m response\u001b[39m=\u001b[39mcall_openapi(\u001b[39m'\u001b[39;49m\u001b[39mwhat is science?\u001b[39;49m\u001b[39m'\u001b[39;49m)\n",
-      "Cell \u001b[1;32mIn [5], line 2\u001b[0m, in \u001b[0;36mcall_openapi\u001b[1;34m(question)\u001b[0m\n\u001b[0;32m      1\u001b[0m \u001b[39mdef\u001b[39;00m \u001b[39mcall_openapi\u001b[39m(question):\n\u001b[1;32m----> 2\u001b[0m     response \u001b[39m=\u001b[39m openai\u001b[39m.\u001b[39;49mCompletion\u001b[39m.\u001b[39;49mcreate(\n\u001b[0;32m      3\u001b[0m       engine\u001b[39m=\u001b[39;49m\u001b[39m\"\u001b[39;49m\u001b[39mada\u001b[39;49m\u001b[39m\"\u001b[39;49m,\n\u001b[0;32m      4\u001b[0m       prompt\u001b[39m=\u001b[39;49m\u001b[39m\"\"\"\u001b[39;49m\n\u001b[0;32m      5\u001b[0m \u001b[39m        This is a banking expert.\u001b[39;49m\n\u001b[0;32m      6\u001b[0m \u001b[39m        Q: What is interest rate?\u001b[39;49m\n\u001b[0;32m      7\u001b[0m \u001b[39m        A: The interest rate is the amount a lender charges for the use of assets expressed as a percentage of the principal.\u001b[39;49m\n\u001b[0;32m      8\u001b[0m \u001b[39m        Q: What is PD?\u001b[39;49m\n\u001b[0;32m      9\u001b[0m \u001b[39m        A: Probability of default.\u001b[39;49m\n\u001b[0;32m     10\u001b[0m \u001b[39m        Q: \u001b[39;49m\u001b[39m{question}\u001b[39;49;00m\u001b[39m?\u001b[39;49m\n\u001b[0;32m     11\u001b[0m \u001b[39m        A:\u001b[39;49m\u001b[39m\"\"\"\u001b[39;49m\u001b[39m.\u001b[39;49mformat(question\u001b[39m=\u001b[39;49mquestion),\n\u001b[0;32m     12\u001b[0m       temperature\u001b[39m=\u001b[39;49m\u001b[39m0.3\u001b[39;49m,\n\u001b[0;32m     13\u001b[0m       max_tokens\u001b[39m=\u001b[39;49m\u001b[39m60\u001b[39;49m,\n\u001b[0;32m     14\u001b[0m       top_p\u001b[39m=\u001b[39;49m\u001b[39m1.0\u001b[39;49m,\n\u001b[0;32m     15\u001b[0m       frequency_penalty\u001b[39m=\u001b[39;49m\u001b[39m0.0\u001b[39;49m,\n\u001b[0;32m     16\u001b[0m       presence_penalty\u001b[39m=\u001b[39;49m\u001b[39m0.0\u001b[39;49m,\n\u001b[0;32m     17\u001b[0m       stop\u001b[39m=\u001b[39;49m[\u001b[39m\"\u001b[39;49m\u001b[39m\\n\u001b[39;49;00m\u001b[39m\"\u001b[39;49m]\n\u001b[0;32m     18\u001b[0m     )\n\u001b[0;32m     20\u001b[0m     \u001b[39mreturn\u001b[39;00m response\n",
-      "File \u001b[1;32mc:\\Users\\sudee\\AppData\\Local\\Programs\\Python\\Python310\\lib\\site-packages\\openai\\api_resources\\completion.py:25\u001b[0m, in \u001b[0;36mCompletion.create\u001b[1;34m(cls, *args, **kwargs)\u001b[0m\n\u001b[0;32m     23\u001b[0m \u001b[39mwhile\u001b[39;00m \u001b[39mTrue\u001b[39;00m:\n\u001b[0;32m     24\u001b[0m     \u001b[39mtry\u001b[39;00m:\n\u001b[1;32m---> 25\u001b[0m         \u001b[39mreturn\u001b[39;00m \u001b[39msuper\u001b[39m()\u001b[39m.\u001b[39mcreate(\u001b[39m*\u001b[39margs, \u001b[39m*\u001b[39m\u001b[39m*\u001b[39mkwargs)\n\u001b[0;32m     26\u001b[0m     \u001b[39mexcept\u001b[39;00m TryAgain \u001b[39mas\u001b[39;00m e:\n\u001b[0;32m     27\u001b[0m         \u001b[39mif\u001b[39;00m timeout \u001b[39mis\u001b[39;00m \u001b[39mnot\u001b[39;00m \u001b[39mNone\u001b[39;00m \u001b[39mand\u001b[39;00m time\u001b[39m.\u001b[39mtime() \u001b[39m>\u001b[39m start \u001b[39m+\u001b[39m timeout:\n",
-      "File \u001b[1;32mc:\\Users\\sudee\\AppData\\Local\\Programs\\Python\\Python310\\lib\\site-packages\\openai\\api_resources\\abstract\\engine_api_resource.py:153\u001b[0m, in \u001b[0;36mEngineAPIResource.create\u001b[1;34m(cls, api_key, api_base, api_type, request_id, api_version, organization, **params)\u001b[0m\n\u001b[0;32m    127\u001b[0m \u001b[39m@classmethod\u001b[39m\n\u001b[0;32m    128\u001b[0m \u001b[39mdef\u001b[39;00m \u001b[39mcreate\u001b[39m(\n\u001b[0;32m    129\u001b[0m     \u001b[39mcls\u001b[39m,\n\u001b[1;32m   (...)\u001b[0m\n\u001b[0;32m    136\u001b[0m     \u001b[39m*\u001b[39m\u001b[39m*\u001b[39mparams,\n\u001b[0;32m    137\u001b[0m ):\n\u001b[0;32m    138\u001b[0m     (\n\u001b[0;32m    139\u001b[0m         deployment_id,\n\u001b[0;32m    140\u001b[0m         engine,\n\u001b[1;32m   (...)\u001b[0m\n\u001b[0;32m    150\u001b[0m         api_key, api_base, api_type, api_version, organization, \u001b[39m*\u001b[39m\u001b[39m*\u001b[39mparams\n\u001b[0;32m    151\u001b[0m     )\n\u001b[1;32m--> 153\u001b[0m     response, _, api_key \u001b[39m=\u001b[39m requestor\u001b[39m.\u001b[39;49mrequest(\n\u001b[0;32m    154\u001b[0m         \u001b[39m\"\u001b[39;49m\u001b[39mpost\u001b[39;49m\u001b[39m\"\u001b[39;49m,\n\u001b[0;32m    155\u001b[0m         url,\n\u001b[0;32m    156\u001b[0m         params\u001b[39m=\u001b[39;49mparams,\n\u001b[0;32m    157\u001b[0m         headers\u001b[39m=\u001b[39;49mheaders,\n\u001b[0;32m    158\u001b[0m         stream\u001b[39m=\u001b[39;49mstream,\n\u001b[0;32m    159\u001b[0m         request_id\u001b[39m=\u001b[39;49mrequest_id,\n\u001b[0;32m    160\u001b[0m         request_timeout\u001b[39m=\u001b[39;49mrequest_timeout,\n\u001b[0;32m    161\u001b[0m     )\n\u001b[0;32m    163\u001b[0m     \u001b[39mif\u001b[39;00m stream:\n\u001b[0;32m    164\u001b[0m         \u001b[39m# must be an iterator\u001b[39;00m\n\u001b[0;32m    165\u001b[0m         \u001b[39massert\u001b[39;00m \u001b[39mnot\u001b[39;00m \u001b[39misinstance\u001b[39m(response, OpenAIResponse)\n",
-      "File \u001b[1;32mc:\\Users\\sudee\\AppData\\Local\\Programs\\Python\\Python310\\lib\\site-packages\\openai\\api_requestor.py:226\u001b[0m, in \u001b[0;36mAPIRequestor.request\u001b[1;34m(self, method, url, params, headers, files, stream, request_id, request_timeout)\u001b[0m\n\u001b[0;32m    205\u001b[0m \u001b[39mdef\u001b[39;00m \u001b[39mrequest\u001b[39m(\n\u001b[0;32m    206\u001b[0m     \u001b[39mself\u001b[39m,\n\u001b[0;32m    207\u001b[0m     method,\n\u001b[1;32m   (...)\u001b[0m\n\u001b[0;32m    214\u001b[0m     request_timeout: Optional[Union[\u001b[39mfloat\u001b[39m, Tuple[\u001b[39mfloat\u001b[39m, \u001b[39mfloat\u001b[39m]]] \u001b[39m=\u001b[39m \u001b[39mNone\u001b[39;00m,\n\u001b[0;32m    215\u001b[0m ) \u001b[39m-\u001b[39m\u001b[39m>\u001b[39m Tuple[Union[OpenAIResponse, Iterator[OpenAIResponse]], \u001b[39mbool\u001b[39m, \u001b[39mstr\u001b[39m]:\n\u001b[0;32m    216\u001b[0m     result \u001b[39m=\u001b[39m \u001b[39mself\u001b[39m\u001b[39m.\u001b[39mrequest_raw(\n\u001b[0;32m    217\u001b[0m         method\u001b[39m.\u001b[39mlower(),\n\u001b[0;32m    218\u001b[0m         url,\n\u001b[1;32m   (...)\u001b[0m\n\u001b[0;32m    224\u001b[0m         request_timeout\u001b[39m=\u001b[39mrequest_timeout,\n\u001b[0;32m    225\u001b[0m     )\n\u001b[1;32m--> 226\u001b[0m     resp, got_stream \u001b[39m=\u001b[39m \u001b[39mself\u001b[39;49m\u001b[39m.\u001b[39;49m_interpret_response(result, stream)\n\u001b[0;32m    227\u001b[0m     \u001b[39mreturn\u001b[39;00m resp, got_stream, \u001b[39mself\u001b[39m\u001b[39m.\u001b[39mapi_key\n",
-      "File \u001b[1;32mc:\\Users\\sudee\\AppData\\Local\\Programs\\Python\\Python310\\lib\\site-packages\\openai\\api_requestor.py:619\u001b[0m, in \u001b[0;36mAPIRequestor._interpret_response\u001b[1;34m(self, result, stream)\u001b[0m\n\u001b[0;32m    611\u001b[0m     \u001b[39mreturn\u001b[39;00m (\n\u001b[0;32m    612\u001b[0m         \u001b[39mself\u001b[39m\u001b[39m.\u001b[39m_interpret_response_line(\n\u001b[0;32m    613\u001b[0m             line, result\u001b[39m.\u001b[39mstatus_code, result\u001b[39m.\u001b[39mheaders, stream\u001b[39m=\u001b[39m\u001b[39mTrue\u001b[39;00m\n\u001b[0;32m    614\u001b[0m         )\n\u001b[0;32m    615\u001b[0m         \u001b[39mfor\u001b[39;00m line \u001b[39min\u001b[39;00m parse_stream(result\u001b[39m.\u001b[39miter_lines())\n\u001b[0;32m    616\u001b[0m     ), \u001b[39mTrue\u001b[39;00m\n\u001b[0;32m    617\u001b[0m \u001b[39melse\u001b[39;00m:\n\u001b[0;32m    618\u001b[0m     \u001b[39mreturn\u001b[39;00m (\n\u001b[1;32m--> 619\u001b[0m         \u001b[39mself\u001b[39;49m\u001b[39m.\u001b[39;49m_interpret_response_line(\n\u001b[0;32m    620\u001b[0m             result\u001b[39m.\u001b[39;49mcontent\u001b[39m.\u001b[39;49mdecode(\u001b[39m\"\u001b[39;49m\u001b[39mutf-8\u001b[39;49m\u001b[39m\"\u001b[39;49m),\n\u001b[0;32m    621\u001b[0m             result\u001b[39m.\u001b[39;49mstatus_code,\n\u001b[0;32m    622\u001b[0m             result\u001b[39m.\u001b[39;49mheaders,\n\u001b[0;32m    623\u001b[0m             stream\u001b[39m=\u001b[39;49m\u001b[39mFalse\u001b[39;49;00m,\n\u001b[0;32m    624\u001b[0m         ),\n\u001b[0;32m    625\u001b[0m         \u001b[39mFalse\u001b[39;00m,\n\u001b[0;32m    626\u001b[0m     )\n",
-      "File \u001b[1;32mc:\\Users\\sudee\\AppData\\Local\\Programs\\Python\\Python310\\lib\\site-packages\\openai\\api_requestor.py:679\u001b[0m, in \u001b[0;36mAPIRequestor._interpret_response_line\u001b[1;34m(self, rbody, rcode, rheaders, stream)\u001b[0m\n\u001b[0;32m    677\u001b[0m stream_error \u001b[39m=\u001b[39m stream \u001b[39mand\u001b[39;00m \u001b[39m\"\u001b[39m\u001b[39merror\u001b[39m\u001b[39m\"\u001b[39m \u001b[39min\u001b[39;00m resp\u001b[39m.\u001b[39mdata\n\u001b[0;32m    678\u001b[0m \u001b[39mif\u001b[39;00m stream_error \u001b[39mor\u001b[39;00m \u001b[39mnot\u001b[39;00m \u001b[39m200\u001b[39m \u001b[39m<\u001b[39m\u001b[39m=\u001b[39m rcode \u001b[39m<\u001b[39m \u001b[39m300\u001b[39m:\n\u001b[1;32m--> 679\u001b[0m     \u001b[39mraise\u001b[39;00m \u001b[39mself\u001b[39m\u001b[39m.\u001b[39mhandle_error_response(\n\u001b[0;32m    680\u001b[0m         rbody, rcode, resp\u001b[39m.\u001b[39mdata, rheaders, stream_error\u001b[39m=\u001b[39mstream_error\n\u001b[0;32m    681\u001b[0m     )\n\u001b[0;32m    682\u001b[0m \u001b[39mreturn\u001b[39;00m resp\n",
-      "\u001b[1;31mRateLimitError\u001b[0m: You exceeded your current quota, please check your plan and billing details."
-     ]
+     "data": {
+      "text/plain": [
+       "<OpenAIObject text_completion id=cmpl-6n7QJ64OmYVt5n7hiOWrQurUqiS02 at 0x1758ebe1760> JSON: {\n",
+       "  \"choices\": [\n",
+       "    {\n",
+       "      \"finish_reason\": \"length\",\n",
+       "      \"index\": 0,\n",
+       "      \"logprobs\": null,\n",
+       "      \"text\": \" \\u00a0Developed a python application to automate the process of manual rotation of passwords for the generic accounts used by different pipelines in PAM Portal, which is an UI to access CyberArk's CCP Safes.\\nCreated Venafi Certificates to connect different generic accounts with Non-Prod and\"\n",
+       "    }\n",
+       "  ],\n",
+       "  \"created\": 1677164627,\n",
+       "  \"id\": \"cmpl-6n7QJ64OmYVt5n7hiOWrQurUqiS02\",\n",
+       "  \"model\": \"davinci\",\n",
+       "  \"object\": \"text_completion\",\n",
+       "  \"usage\": {\n",
+       "    \"completion_tokens\": 60,\n",
+       "    \"prompt_tokens\": 1100,\n",
+       "    \"total_tokens\": 1160\n",
+       "  }\n",
+       "}"
+      ]
+     },
+     "execution_count": 15,
+     "metadata": {},
+     "output_type": "execute_result"
     }
    ],
    "source": [
-    "response=call_openapi('what is science?')"
+    "response"
    ]
   },
   {
